# macpymessenger

./: .env.template  .gitignore  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  CONTEXT-MAP.md  LICENSE  README.md  README.rst  pyproject.toml  requirements.txt  setup.py  skills-lock.json  test.py
.agents/skills/improve-codebase-architecture/: INTERFACE-DESIGN.md  SKILL.md
.agents/skills/prototype/: UI.md
.agents/skills/teach/: SKILL.md
.github/workflows/: ci.yml  python-publish.yml
docs/: conf.py  configuration.rst  index.rst  installation.rst  introduction.rst  modules.rst  testing.rst  usage.rst
docs/adr/: README.md
docs/agent-instructions/: cleanup-candidates.md  documentation.md  git-release.md  index.md  project-map.md  python-code.md  security.md  suggested-docs-structure.md  testing.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
i_py_messenger/: __init__.py  configuration.py  db_manager.py  imessage_client.py  message.py
i_py_messenger/osascript/: checkCompatibility.scpt  sendMessage.scpt
macpymessenger/: __init__.py  configuration.py  imessage_client.py
macpymessenger/src/: __init__.py  configuration.py  exceptions.py  message_template.py  template_manager.py
py_imessage/: __init__.py  configuration.py  db_conn.py  db_manager.py  imessage.py  imessage_client.py  message.py
scripts/: try_me.py
src/macpymessenger/: CONTEXT.md  __init__.py  client.py  commands.py  configuration.py  delivery.py  exceptions.py  templates.py
src/macpymessenger/osascript/: sendMessage.scpt
templates/: community_engagement_template.txt  event_invitation_template.txt  feature_teaser_template.txt  hype_template.txt  launch_announcement_template.txt  reminder.txt  thank_you.txt  welcome.txt
tests/: __init__.py  conftest.py  support.py  test_client_bulk.py  test_client_experimental.py  test_client_logging.py  test_client_send.py  test_client_templates.py  test_command_runner.py  test_configuration.py  test_delivery.py  test_distribution_import.py  test_imessage_client.py  test_templates.py
