[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "macpymessenger"
version = "0.2.0"
description = "A type-safe Python library for sending macOS iMessages via AppleScript with template support and explicit error handling."
readme = "README.md"
requires-python = ">=3.14"
license = { file = "LICENSE" }
authors = [{ name = "Ethan Wickstrom" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: MacOS :: MacOS X",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.14",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/ethan-wickstrom/macpymessenger"
Repository = "https://github.com/ethan-wickstrom/macpymessenger"

[tool.hatch.build.targets.wheel]
packages = ["src/macpymessenger"]
force-include = { "src/macpymessenger/osascript/sendMessage.scpt" = "macpymessenger/osascript/sendMessage.scpt" }

[tool.hatch.build.targets.sdist]
include = [
  "src/macpymessenger/osascript/sendMessage.scpt",
]

[tool.uv]
dev-dependencies = [
  "pytest>=8.3.2",
  "mypy>=1.11.2",
  "ruff>=0.6.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.mypy]
python_version = "3.14"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
